--- a/SVX_Boost2x_Lung_D90.Rmd
+++ b/SVX_Boost2x_Lung_D90.Rmd
@@ -63,6 +63,7 @@ library(viridis)
 library(vcd)
 library(ggmosaic)
 library(kableExtra)
+library(ggbeeswarm)
 ```
 
 ```{r}
@@ -144,7 +145,7 @@ all_data <- all_data %>%
                          "BCG + SolaVAX-IM-CpG + SolaVAX-IN-CPG" = "BCG + SolaVAX-IM-CpG1018 + SolaVAX-IN-CPG1018",
                         "BCG 2x" = "BCG + BCG",
                         "BCG 1x" = "BCG",
-                        "BCG + SolaVAX-IN-Laporte 2x" = "BCG + SolaVAX-Mtb + Laporte-IN-2x"))
+                        "BCG + SolaVAX-IN-Laporte 2x" = "BCG + SolaVAX-Mtb + Mucosimmune-IN-2x"))
 
 
 all_data %>%
@@ -189,14 +190,6 @@ tidy_cfu_data <- all_data %>%
   slice(which.min(ifelse(CFUs >= 2 & CFUs <= 120, dilution, Inf))) %>% # which.min returns the index of the row with the minimum dilution value within the specified CFUs range
   ungroup()
 
-
-
-
-
-```
-
-
-```{r}
 # Calculating CFU/ml for every qualifying replicate between 10-75 CFUs. Column binding by organ name to the metadata sheet via inner_join().
 meta <- read_excel(path, sheet = "metadata")
 
@@ -214,53 +207,22 @@ tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
 #   filter(!(mouse == "B" & group == "BCG 1x"))
 
 tidy_cfu_meta_joined 
+
+
+
 ```
 
 
-## Calculate CFUs from best dilution/Estimate bacterial load for each sample based on good dilution
-```{r}
-# Calculating CFU/ml for every qualifying replicate between 10-75 CFUs. Column binding by organ name to the metadata sheet via inner_join().
-meta <- read_excel(path, sheet = "metadata")
-
-lungD90tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
-  group_by(group) %>% 
-  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.33) %>%
-  dplyr::select(organ, count_date, who_plated, who_counted, group,  mouse, dilution, 
-         CFUs, CFUs_whole) %>% 
-  ungroup()
-
-# tidy_cfu_meta_joined  <- tidy_cfu_meta_joined %>%
-#   filter(!(mouse == "D" & group == "BCG + SolaVAX-IM-CpG1018 + SolaVAX-IN-CPG1018"))
-# 
-# tidy_cfu_meta_joined  <- tidy_cfu_meta_joined %>%
-#   filter(!(mouse == "B" & group == "BCG 1x"))
-
-# lungD90tidy_cfu_meta_joined 
-# 
-# setwd("R:/RSTOR-HenaO_lab/Pablo/CFU_Pipeline")
-# getwd()
-# 
-# write.csv(lungD90tidy_cfu_meta_joined, "lungD90tidy_cfu_meta_joined.csv", row.names = FALSE)
-
-# Print the dataframe
-lungD90tidy_cfu_meta_joined
-
-
-# tidy_cfu_meta_joined <- tidy_cfu_meta_joined %>%
-#   dplyr::filter(!group %in% c("BCG + SolaVAX-IM-AdVAX 2x", "BCG + SolaVAX-IM-CpG1018 2x", "BCG + SolaVAX-IM-CpG1018 + SolaVAX-IN-CPG1018", "BCG + SolaVAX-IM-AdVAX + SolaVAX-IN-AdVAX"))
-# 
-# tidy_cfu_meta_joined$group = factor(tidy_cfu_meta_joined$group, levels = c("Saline", "BCG", "BCG + BCG", "BCG + SolaVAX-Mtb + Laporte-IN-2x"))
-
-
-tidy_cfu_meta_joined %>%
-  distinct(group)
-```
 
 GLM
 
 ```{r}
 library(knitr)
 library(broom)
+
+tidy_cfu_meta_joined <- tidy_cfu_meta_joined %>%
+  dplyr::filter(group %in% c("Saline", "BCG", "BCG + BCG", "BCG + SolaVAX-Mtb + Mucosimmune-IN-2x"))
+
 glm_result <- glm(CFUs_whole ~ relevel(group, ref = "BCG"), 
                   data = tidy_cfu_meta_joined, 
                   family = quasipoisson)
@@ -278,21 +240,22 @@ glm_summary$term <- gsub("relevel\\(group, ref = \"BCG\"\\)", "", glm_summary$te
 glm_summary$term <- gsub("\\(Intercept\\)", "BCG", glm_summary$term)
 
 
-glm_summary$term <- factor(glm_summary$term, 
-                           levels = c("Saline", 
-                                      "BCG", 
-                                      "BCG + BCG", 
-                                      "BCG + SolaVAX-IM-CpG1018 2x", 
-                                      "BCG + SolaVAX-IM-CpG1018 + SolaVAX-IN-CPG1018", 
-                                      "BCG + SolaVAX-IM-AdVAX 2x", 
-                                      "BCG + SolaVAX-IM-AdVAX + SolaVAX-IN-AdVAX", 
-                                      "BCG + SolaVAX-Mtb + Laporte-IN-2x"))
+# glm_summary$term <- factor(glm_summary$term, 
+#                            levels = c("Saline", 
+#                                       "BCG", 
+#                                       "BCG + BCG", 
+#                                       "BCG + SolaVAX-IM-CpG1018 2x", 
+#                                       "BCG + SolaVAX-IM-CpG1018 + SolaVAX-IN-CPG1018", 
+#                                       "BCG + SolaVAX-IM-AdVAX 2x", 
+#                                       "BCG + SolaVAX-IM-AdVAX + SolaVAX-IN-AdVAX", 
+#                                       "BCG + SolaVAX-Mtb + Laporte-IN-2x"))
 
 colnames(glm_summary) <- c("Coefficient", "Estimate", "SE", "Statistic", "p.value", "Significance")
 glm_summary <- glm_summary %>%
   dplyr::select(-Statistic) %>%  
   dplyr::filter(Coefficient != "BCG")
 
+glm_summary[,-1] <- lapply(glm_summary[,-1], function(x) if (is.numeric(x)) signif(x, 2) else x)
 
 glm_summary %>%
   kable("html", caption = " ") %>%
@@ -310,6 +273,47 @@ glm_summary %>%
 
 ```
 
+
+
+
+```{r}
+tidy_cfu_meta_joined$group <- factor(tidy_cfu_meta_joined$group,
+                           levels = c("Saline",
+                                      "BCG",
+                                      "BCG + BCG",
+                                      "BCG + SolaVAX-Mtb + Mucosimmune-IN-2x"))
+
+
+
+tidy_cfu_meta_joined %>%
+  ggplot(aes(x = group, y = log10(CFUs_whole), fill = group, color = group)) +
+  geom_beeswarm(size = 3, shape = 21, alpha = 0.9, na.rm = TRUE, 
+                dodge.width = 0.75, color = "black") +
+  scale_color_viridis_d(name = " ", alpha = 1) +  
+  scale_fill_viridis_d(name = " ", alpha = 1) + 
+  theme_minimal() + 
+ theme(
+        axis.text.x = element_blank(),
+        #axis.text.x = element_text(angle = 90, hjust = 1, size = 16), 
+        axis.text.y = element_text(size = 16),
+        axis.title.x = element_blank(),
+        axis.title.y = element_text(size = 16, face = "bold"),
+        legend.text = element_text(size = 8), 
+        legend.title = element_text(size = 16), 
+        legend.key.size = unit(1, 'cm'), 
+        legend.position = ("right"),
+        plot.title = element_text(color="black", size=16, face="bold")) + 
+  theme(strip.text = element_text(size=16, face = "bold")) +
+        scale_y_continuous(limits = function(x) c(min(x), max(x) * 1.1)) + 
+  labs(y = "Total CFU Log10", x = "", fill = "Vaccine", color = "Vaccine") +
+  ggtitle("SolaVAX-TB 2x Boost Day 90") +
+  ylim(4, 7)
+
+
+#Do not delete
+#df = 5
+```
+EXTRA CODE
 
 ```{r}
 
@@ -368,10 +372,12 @@ glm_summary %>%
 # library(kableExtra)
 # 
 # kable(comparison_df, caption = "Comparison Results", align = "c")
-```
 
 
-```{r}
+
+
+
+
 # female_combined_df <- as.data.frame(female_p_values) %>%
 #   rownames_to_column("group") %>%
 #   left_join(as.data.frame(female_significant_comparisons) %>%
@@ -398,63 +404,45 @@ glm_summary %>%
 # with(tidy_cfu_meta_joined, t.test(log10(CFUs_whole)[group == "Saline"], log10(CFUs_whole)[group == "BCG + SolaVAX-IN-Laporte 2x"]))
 
 
-```
 
 
-```{r}
+
+
+
+
+# # Calculating CFU/ml for every qualifying replicate between 10-75 CFUs. Column binding by organ name to the metadata sheet via inner_join().
+# meta <- read_excel(path, sheet = "metadata")
+# 
+# lungD90tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
+#   group_by(group) %>% 
+#   mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.33) %>%
+#   dplyr::select(organ, count_date, who_plated, who_counted, group,  mouse, dilution, 
+#          CFUs, CFUs_whole) %>% 
+#   ungroup()
+# 
+# # tidy_cfu_meta_joined  <- tidy_cfu_meta_joined %>%
+# #   filter(!(mouse == "D" & group == "BCG + SolaVAX-IM-CpG1018 + SolaVAX-IN-CPG1018"))
+# # 
+# # tidy_cfu_meta_joined  <- tidy_cfu_meta_joined %>%
+# #   filter(!(mouse == "B" & group == "BCG 1x"))
+# 
+# # lungD90tidy_cfu_meta_joined 
+# # 
+# # setwd("R:/RSTOR-HenaO_lab/Pablo/CFU_Pipeline")
+# # getwd()
+# # 
+# # write.csv(lungD90tidy_cfu_meta_joined, "lungD90tidy_cfu_meta_joined.csv", row.names = FALSE)
+# 
+# # Print the dataframe
+# lungD90tidy_cfu_meta_joined
+# 
+# 
+# # tidy_cfu_meta_joined <- tidy_cfu_meta_joined %>%
+# #   dplyr::filter(!group %in% c("BCG + SolaVAX-IM-AdVAX 2x", "BCG + SolaVAX-IM-CpG1018 2x", "BCG + SolaVAX-IM-CpG1018 + SolaVAX-IN-CPG1018", "BCG + SolaVAX-IM-AdVAX + SolaVAX-IN-AdVAX"))
+# # 
+# # tidy_cfu_meta_joined$group = factor(tidy_cfu_meta_joined$group, levels = c("Saline", "BCG", "BCG + BCG", "BCG + SolaVAX-Mtb + Laporte-IN-2x"))
+# 
+# 
 # tidy_cfu_meta_joined %>%
-#   ggplot(aes(x = group, y = log10(CFUs_whole), fill = group)) +
-#   geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black", cex = 1.5, position = position_dodge(width = .75)) +
-#   geom_boxplot(aes(fill = group), alpha = 0.3) +  scale_fill_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) + scale_color_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) +
-#   facet_wrap(~sex) +
-#   theme_bw() +
-#   theme(
-#     axis.text.x = element_blank(), # Remove X-axis names
-#     axis.text.y = element_text(size = 24),
-#     axis.title.x = element_blank(),
-#     axis.title.y = element_text(size = 14, face = "bold"),
-#     legend.position = "right", # Set legend position to right
-#     plot.title = element_blank()) +
-#   theme(strip.text = element_text(size = 14, face = "bold")) +
-#   labs(
-#     title = paste0("SolaVAX Day 90 Lung CFU"),
-#     x = "Group",
-#     y = "Log10 Lung CFU",
-#     fill = "Group") +
-#   ylim(4, 7)
-
-# FILTERING GROUPS
-# tidy_cfu_meta_joined <- tidy_cfu_meta_joined %>%
-#   dplyr::filter(group %in% c("Saline", "BCG 1x", "BCG + SolaVAX-IM-CpG1018 2x", "BCG + SolaVAX-IM-CpG1018 + SolaVAX-IN-CPG1018"))
-
-
-ggplot(tidy_cfu_meta_joined, aes(x = group, y = log10(CFUs_whole), fill = group)) +#, color = group)) +
-geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black", 
-           cex = 1.5, position = position_dodge(width = .75)) + 
-    geom_boxplot(aes(fill = group), alpha = 0.3) + 
-    scale_color_viridis_d(name = " ", alpha = 1) +  
-  scale_fill_viridis_d(name = " ", alpha = 1) + 
-  theme_minimal() + 
-  theme(
-        axis.text.x = element_blank(),
-        #axis.text.x = element_text(angle = 90, hjust = 1, size = 16), 
-        axis.text.y = element_text(size = 16),
-        axis.title.x = element_blank(),
-        axis.title.y = element_text(size = 16, face = "bold"),
-        legend.text = element_text(size = 10), 
-        legend.title = element_text(size = 16), 
-        legend.key.size = unit(1, 'cm'), 
-        legend.position = ("right"),
-        plot.title = element_text(color="black", size=16, face="bold")) + 
-  theme(strip.text = element_text(size=16, face = "bold")) +
-        scale_y_continuous(limits = function(x) c(min(x), max(x) * 1.1)) +
-  labs(y = "Total CFU Log10", x = "", fill = "Vaccine", color = "Vaccine") +
-  ggtitle("SolaVAX-TB 2x Boost Day 90") +
-  ylim(4, 7)
-
-
-#Do not delete
-#df = 5
+#   distinct(group)
 ```
-
-
