spleen CFUs Dec '24

--- a/SVX_Boost2x_SP_D90.Rmd
+++ b/SVX_Boost2x_SP_D90.Rmd
@@ -70,7 +70,7 @@ library(ggbeeswarm)
 #Replace w/ path to CFU sheet
 # path <- c("/Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/SVX_Boost2X_Lung_Day90_cfu_numbers.xlsx")
 
-path <- c("R:\\RSTOR-HenaO_lab\\Pablo\\CFU_Pipeline\\SVX_Boost2X_Lung_Day90_cfu_numbers.xlsx")
+path <- "SVX_Boost2X_Spleen_Day90_cfu_numbers.xlsx"
 
 sheet_names <- excel_sheets(path)
 sheet_names <- sheet_names[!sheet_names %in% c("metadata")]
@@ -195,7 +195,7 @@ meta <- read_excel(path, sheet = "metadata")
 
 tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
   group_by(group) %>% 
-  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.33) %>%
+  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.5) %>%
   dplyr::select(organ, count_date, who_plated, who_counted, group,  mouse, dilution, 
          CFUs, CFUs_whole) %>% 
   ungroup()
@@ -307,7 +307,7 @@ tidy_cfu_meta_joined %>%
         scale_y_continuous(limits = function(x) c(min(x), max(x) * 1.1)) + 
   labs(y = "Total CFU Log10", x = "", fill = "Vaccine", color = "Vaccine") +
   ggtitle("SolaVAX-TB 2x Boost Day 90") +
-  ylim(4, 7)
+  ylim(3, 6)
 
 
 #Do not delete
